[package]
name = "mqtt2exmebus"
version = "0.2.1"
edition = "2021"
description = "A piece of converter to convert incoming JSON into redisignal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master", default-features=false, features=["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
to_vec = "0.1.0"
bincode = "1.3.3"
futures = "0.3.25"
async-std = "1.12.0"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
